--- a/WFC en C++.vcxproj
+++ b/WFC en C++.vcxproj
@@ -105,6 +105,7 @@
       <PreprocessorDefinitions>_DEBUG;_CONSOLE;%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <ConformanceMode>true</ConformanceMode>
       <LanguageStandard>stdcpp17</LanguageStandard>
+      <AdditionalIncludeDirectories>$(SolutionDir)dependencies</AdditionalIncludeDirectories>
     </ClCompile>
     <Link>
       <SubSystem>Console</SubSystem>
@@ -120,6 +121,7 @@
       <PreprocessorDefinitions>NDEBUG;_CONSOLE;%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <ConformanceMode>true</ConformanceMode>
       <LanguageStandard>stdcpp17</LanguageStandard>
+      <AdditionalIncludeDirectories>$(SolutionDir)dependencies</AdditionalIncludeDirectories>
     </ClCompile>
     <Link>
       <SubSystem>Console</SubSystem>
@@ -130,23 +132,23 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClCompile Include="bitmap_helper.cpp" />
+    <ClCompile Include="dependencies\tinyxml2.cpp" />
     <ClCompile Include="execution_data.cpp" />
     <ClCompile Include="model.cpp" />
     <ClCompile Include="overlapping_model.cpp" />
     <ClCompile Include="simpletiled_model.cpp" />
-    <ClCompile Include="tinyxml2.cpp" />
     <ClCompile Include="WFC en C++.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="bitmap_helper.h" />
+    <ClInclude Include="dependencies\stb_image.h" />
+    <ClInclude Include="dependencies\stb_image_write.h" />
+    <ClInclude Include="dependencies\tinyxml2.h" />
     <ClInclude Include="execution_data.h" />
     <ClInclude Include="helper.h" />
     <ClInclude Include="model.h" />
     <ClInclude Include="overlapping_model.h" />
     <ClInclude Include="simpletiled_model.h" />
-    <ClInclude Include="stb_image.h" />
-    <ClInclude Include="stb_image_write.h" />
-    <ClInclude Include="tinyxml2.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
